<resources>
    <string name="app_name">Notifications</string>
    <!-- Settings Activity Title -->
    <string name="settings">Settings</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_credits">Credits</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_contribute">Help Out!</string>
    <string name="manage_accounts">Manage Accounts</string>
    <string name="search_in_all">Search</string>
    <string name="notification_channel_invalid_config_description">Invalid Server configuration</string>
    <string name="serverconfig_notification_channel_name">Server configuration</string>
    <string name="serverconfig_notification_wrong_config">Wrong Configuration</string>
    <string name="serverconfig_notification_wrong_config_long">The Server configuration was not correct. Please change it!</string>
    <string name="notification_persistent_title">Background polling</string>
    <string name="notification_persistent_content">Background connection notification</string>
    <string name="pref_polling_interval">Polling interval</string>
    <string name="pref_meterednetwork_title">Allow metered networks</string>
    <string name="pref_meterednetwork_description">Allows networks which are metered</string>
    <string name="pref_roaming_title">Allow roaming</string>
    <string name="pref_roaming_description">Allows checking for notifications when in roaming</string>
    <string name="pref_connectioninsecure_title">Use insecure connection</string>
    <string name="pref_connectioninsecure_description">Use http instead of https</string>
    <string name="pref_group_connection">Connection</string>
    <string name="pref_sso_logout_title">Log out from Nexcloud</string>
    <string name="pref_sso_logout_description">Stop using Nextcloud app for authentication</string>
    <string name="pref_sso_login_title">Log in via Nextcloud app</string>
    <string name="pref_sso_login_description">Use on-device Nextcloud account</string>
    <string name="pref_server_login_title">Login</string>
    <string name="pref_server_login_description">Your username</string>
    <string name="pref_server_login_hint">username</string>
    <string name="pref_server_password_title">Password</string>
    <string name="pref_server_password_summary">Your password</string>
    <string name="pref_server_url_title">Nextcloud address</string>
    <string name="pref_server_url_description">Address of your nextcloud server(without http(s)://)</string>
    <string name="pref_group_login">Login</string>
    <string name="pref_service_title">Enable service</string>
    <string name="pref_service_description">Enables polling notifications</string>
    <string name="pref_group_service">Service</string>
    <string name="servererror_badmessage">Server has sent bad response: </string>
    <string name="servererror_filenotfound">File not found: check your credentials and Nextcloud instance.</string>
    <string name="servererror_io">I/O error: </string>
    <string name="state_noconnection">No network available</string>
    <string name="external_translations">Translations</string>
    <string name="external_github">Code</string>
    <string name="external_donate">Donate</string>
    <string name="license_label">This app is released under a GPL 3.0 License</string>
    <string name="label_contribute">If you want to contribute, you can check out the code, help with translations or donate to the project!</string>
    <string name="menu_apps">Apps</string>
    <string name="pref_app_apps">Apps</string>
    <string name="pref_app_dav">Calendar/Contacts</string>
    <string name="pref_app_custom">Custom Apps</string>
    <string name="filterlist_autofill_description">This List will automatically fill in apps when you recieve a notification. Then you can disable them.</string>
    <string name="filterlist_autofill_title">Application List</string>
    <string name="applist_dav">Calendar/Contacts</string>
    <string name="applist_updates">Updates</string>
    <string name="applist_talk">Nextcloud Talk</string>
</resources>