<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/pref_group_service">
        <SwitchPreference
            android:defaultValue="true"
            android:key="enable_polling"
            android:summary="@string/pref_service_description"
            android:title="@string/pref_service_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_group_login">
        <EditTextPreference
            android:hint="cloud.example.com"
            android:key="server"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/pref_server_url_description"
            android:title="@string/pref_server_url_title" />
        <EditTextPreference
            android:inputType="text|textPassword"
            android:key="password"
            android:password="true"
            android:summary="@string/pref_server_password_summary"
            android:title="@string/pref_server_password_title" />
        <EditTextPreference
            android:hint="@string/pref_server_login_hint"
            android:key="login"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/pref_server_login_description"
            android:title="@string/pref_server_login_title" />
        <Preference
            android:id="@+id/login_sso"
            android:key="login_sso"
            android:summary="@string/pref_sso_logout_description"
            android:title="@string/pref_sso_logout_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_group_connection">
        <SwitchPreference
            android:defaultValue="false"
            android:key="insecure_connection"
            android:summary="@string/pref_connectioninsecure_description"
            android:title="@string/pref_connectioninsecure_title" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="allow_roaming"
            android:summary="@string/pref_roaming_description"
            android:title="@string/pref_roaming_title" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="allow_metered"
            android:summary="@string/pref_meterednetwork_description"
            android:title="@string/pref_meterednetwork_title" />
        <nl.invissvenska.numberpickerpreference.NumberDialogPreference
            android:defaultValue="10"
            android:key="polling_interval"
            android:title="@string/pref_polling_interval"
            app:numberPickerPreference_maxValue="899"
            app:numberPickerPreference_minValue="1"
            app:numberPickerPreference_unitText=" seconds" />
    </PreferenceCategory>

</PreferenceScreen>