<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mainview"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_apps"
            android:icon="@drawable/ic_apps"
            android:title="@string/menu_apps" />
        <item
            android:id="@+id/nav_connection_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_credits"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_credits" />
        <item
            android:id="@+id/nav_contribute"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_contribute" />
    </group>
</menu>